# fenrin

./: .gitignore  Cargo.toml  LOG.md  README.md
.github/workflows/: pages.yml
configs/: ancient-roman.conf  aurelian.conf  caucasian.conf  fenrin.conf  japanese.conf  klingon.conf  obsidian.conf  oceanic.conf  slavic.conf  uralic.conf
docs/: optimization-loop.md  sas-protocol.md
examples/: benchmark.rs  paired.rs
scripts/: build-pgo.sh  build-web.sh
src/: config.rs  grammar.rs  lib.rs  main.rs  sas.rs  session.rs
tests/: cli.rs  lib.rs
web/: app.js  engine.worker.js  index.html  styles.css
web-wasm/: Cargo.toml
web-wasm/src/: lib.rs
